--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 NEO4J_URI=neo4j+s://1ba6b1fa.databases.neo4j.io
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=sjPfTkw3ZsOaX0YI5B0wnzMYM3XpFIcx-sYc0BtrE54
+SECRET_KEY=papu3000superpro
