--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 neo4j==5.20.0
+PyJWT==2.8.0
 python-dotenv==1.0.1
 pytz==2024.1
 Werkzeug==3.0.3
