--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
-NEO4J_URI=neo4j+s://1ba6b1fa.databases.neo4j.io
+NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=sjPfTkw3ZsOaX0YI5B0wnzMYM3XpFIcx-sYc0BtrE54
-SECRET_KEY=papu3000superpro
+NEO4J_PASSWORD=01123581321
